bk_ida/gccida/g3/emit_block_move
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2093:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2105:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2106:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2107:5: error: expected ';' after expression
tree v25; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2107:6: error: use of undeclared identifier 'v25'
tree v25; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2108:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2109:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2110:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2112:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2113:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2114:5: error: expected ';' after expression
tree v32; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2114:6: error: use of undeclared identifier 'v32'
tree v32; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2116:5: error: expected ';' after expression
tree v34; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2116:6: error: use of undeclared identifier 'v34'
tree v34; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2122:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2123:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2124:5: error: expected ';' after expression
tree v43; // rdi 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2124:6: error: use of undeclared identifier 'v43'
tree v43; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/expr.c:2131:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)y[1]; 
               ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_block_move/src/obj/expr.o] Error 1
